refactoring around routes and adding to get varaints
