# go/model_create_service_variant_schema.go
@@ -11,6 +11,8 @@ package fee_schedule_server
 
 type CreateServiceVariantSchema struct {
 
+	ServiceId string `json:"serviceId"`
+
 	Fee float32 `json:"fee"`
 
 	ServiceAttributeValueIds []string `json:"serviceAttributeValueIds"`
