# go/model_variant_response.go
@@ -14,4 +14,6 @@ type VariantResponse struct {
 	Id string `json:"id"`
 
 	Fee float32 `json:"fee"`
+
+	ServiceId string `json:"serviceId"`
 }
